--- a/search/index.html
+++ b/search/index.html
@@ -8,6 +8,7 @@
 
     <script src="/src/components/header.js" type="module"></script>
     <script src="/src/components/footer.js" type="module"></script>
+    <script src="/src/components/breadcrumb.js" type="module"></script>
 
     <title>Search Page</title>
   </head>
@@ -16,24 +17,7 @@
     <ps-header variant="home"></ps-header>
 
     <main class="container section--inline">
-      <!-- Breadcrumb Navigation -->
-      <nav class="breadcrumb">
-        <ul>
-          <li class="breadcrumb-link">
-            <a href="#" class="text-small-extra-bold">Home</a>
-            <svg class="sprite sprite--normal" role="img">
-              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-            </svg>
-          </li>
-          <li class="breadcrumb-link">
-            <a href="#" class="text-small-extra">Search</a>
-            <svg class="sprite sprite--normal" role="img">
-              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-            </svg>
-          </li>
-        </ul>
-      </nav>
-      <!-- End of Breadcrumb Navigation -->
+      <ps-breadcrumb page="search"></ps-breadcrumb>
 
       <section class="search-area">
         <h1 class="heading-1">Searching in Public High School</h1>
