--- a/admission/index.html
+++ b/admission/index.html
@@ -9,6 +9,7 @@
     <script src="/src/components/header.js" type="module"></script>
     <script src="/src/components/footer.js" type="module"></script>
     <script src="/src/components/search.js" type="module"></script>
+    <script src="/src/components/breadcrumb.js" type="module"></script>
 
     <title>Admission</title>
   </head>
@@ -18,22 +19,7 @@
 
     <main class="container">
       <section class="hero">
-        <nav class="breadcrumb">
-          <ul>
-            <li class="breadcrumb-link">
-              <a href="#" class="text-small-extra-bold">Home</a>
-              <svg class="sprite sprite--normal" role="img">
-                <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-              </svg>
-            </li>
-            <li class="breadcrumb-link">
-              <a href="#" class="text-small-extra">Admission</a>
-              <svg class="sprite sprite--dark sprite--normal" role="img">
-                <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-              </svg>
-            </li>
-          </ul>
-        </nav>
+        <ps-breadcrumb page="admission"></ps-breadcrumb>
 
         <h1 class="heading-2">
           ADMISSIONS
