update chevron icon as web component

--- a/about/index.html
+++ b/about/index.html
@@ -10,6 +10,7 @@
     <script src="/src/components/footer.js" type="module"></script>
     <script src="/src/components/search.js" type="module"></script>
     <script src="/src/components/breadcrumb.js" type="module"></script>
+    <script src="/src/components/chevron-right.js" type="module"></script>
 
     <title>About</title>
   </head>
@@ -24,9 +25,7 @@
         <div class="about-main">
           <div class="title-box">
             <h1 class="heading-1">About our Public High School</h1>
-            <svg class="sprite sprite--dark sprite--normal" role="img">
-              <use href="/public/img/sprite.svg#icon-chevron-right"></use>
-            </svg>
+            <chevron-right></chevron-right>
           </div>
 
           <p class="text-small text">
@@ -97,9 +96,7 @@
         <aside class="about-aside-bottom">
           <div>
             <h2>Section header</h2>
-            <svg class="sprite sprite--dark sprite--normal" role="img">
-              <use href="/public/img/sprite.svg#icon-chevron-right"></use>
-            </svg>
+            <chevron-right></chevron-right>
             <ul>
               <li><a href="#">Link one</a></li>
               <li><a href="#">Link two</a></li>
@@ -108,9 +105,7 @@
           </div>
           <div>
             <h2>Section header</h2>
-            <svg class="sprite sprite--dark sprite--normal" role="img">
-              <use href="/public/img/sprite.svg#icon-chevron-right"></use>
-            </svg>
+            <chevron-right></chevron-right>
             <ul>
               <li><a href="#">Link one</a></li>
               <li><a href="#">Link two</a></li>
@@ -119,9 +114,7 @@
           </div>
           <div>
             <h2>Section header</h2>
-            <svg class="sprite sprite--dark sprite--normal" role="img">
-              <use href="/public/img/sprite.svg#icon-chevron-right"></use>
-            </svg>
+            <chevron-right></chevron-right>
             <ul>
               <li><a href="#">Link one</a></li>
               <li><a href="#">Link two</a></li>
