--- a/academics/index.html
+++ b/academics/index.html
@@ -10,6 +10,7 @@
     <script src="/src/components/footer.js" type="module"></script>
     <script src="/src/components/search.js" type="module"></script>
     <script src="/src/components/breadcrumb.js" type="module"></script>
+    <script src="/src/components/chevron-right.js" type="module"></script>
 
     <title>Academics</title>
   </head>
@@ -22,9 +23,7 @@
 
       <h1 class="heading-2 section">
         ACADEMICS
-        <svg class="sprite sprite--dark sprite--normal" role="img">
-          <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-        </svg>
+        <chevron-right></chevron-right>
       </h1>
 
       <p class="section--inline text-large">
