--- a/admission/index.html
+++ b/admission/index.html
@@ -10,6 +10,7 @@
     <script src="/src/components/footer.js" type="module"></script>
     <script src="/src/components/search.js" type="module"></script>
     <script src="/src/components/breadcrumb.js" type="module"></script>
+    <script src="/src/components/chevron-right.js" type="module"></script>
 
     <title>Admission</title>
   </head>
@@ -23,10 +24,9 @@
 
         <h1 class="heading-2">
           ADMISSIONS
-          <svg class="sprite sprite--dark sprite--normal" role="img">
-            <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-          </svg>
+          <chevron-right></chevron-right>
         </h1>
+
         <p class="text-small admission-content">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
           ullam cumque vero maxime tempore sapiente ex veniam necessitatibus
@@ -110,10 +110,9 @@
       <section class="faq">
         <h2 class="heading-2">
           Frequnetly Asked Questions
-          <svg class="sprite sprite--dark sprite--normal" role="img">
-            <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-          </svg>
+          <chevron-right></chevron-right>
         </h2>
+
         <div class="faqs-conainter">
           <details data-name="question">
             <summary class="text-small-bold">
