--- a/notice/index.html
+++ b/notice/index.html
@@ -10,7 +10,7 @@
     <script src="/src/components/footer.js" type="module"></script>
     <script src="/src/components/search.js" type="module"></script>
     <script src="/src/components/breadcrumb.js" type="module"></script>
-
+    <script src="/src/components/chevron-right.js" type="module"></script>
     <script src="./script.js" defer></script>
 
     <title>Notice</title>
@@ -26,19 +26,17 @@
         <section class="news">
           <h2 class="heading-2">
             Featured News
-            <svg class="sprite sprite--dark sprite--normal" role="img">
-              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-            </svg>
+            <chevron-right></chevron-right>
           </h2>
           <div class="news-wrapper">
             <button class="slider__btn slider__btn--left">
               <svg class="sprite sprite--light sprite--large">
-                <use href="../assets/img/sprite.svg#carousel_arrow-left"></use>
+                <use href="/public/img/sprite.svg#carousel_arrow-left"></use>
               </svg>
             </button>
             <button class="slider__btn slider__btn--right">
               <svg class="sprite sprite--light sprite--large">
-                <use href="../assets/img/sprite.svg#carousel_arrow-right"></use>
+                <use href="/public/img/sprite.svg#carousel_arrow-right"></use>
               </svg>
             </button>
             <div class="news-card-wrapper">
@@ -172,9 +170,7 @@
         <section class="events-section">
           <div class="section__title">
             <h2 class="heading-2">Events</h2>
-            <svg class="sprite sprite--dark sprite--normal" role="img">
-              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-            </svg>
+            <chevron-right></chevron-right>
           </div>
           <div class="events-wrapper">
             <ul class="events">
@@ -250,15 +246,13 @@
         <section class="notice">
           <div class="section__title">
             <h2 class="heading-2">Notice</h2>
-            <svg class="sprite sprite--dark sprite--normal" role="img">
-              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-            </svg>
+            <chevron-right></chevron-right>
           </div>
           <ul>
             <li class="notice-item">
               <svg class="sprite sprite--normal" role="img">
                 <use
-                  href="../assets/img/sprite.svg#icon-radio-button-checked"
+                  href="/public/img/sprite.svg#icon-radio-button-checked"
                 ></use>
               </svg>
               <div>
@@ -273,7 +267,7 @@
             <li class="notice-item">
               <svg class="sprite sprite--normal" role="img">
                 <use
-                  href="../assets/img/sprite.svg#icon-radio-button-checked"
+                  href="/public/img/sprite.svg#icon-radio-button-checked"
                 ></use>
               </svg>
               <div>
@@ -288,7 +282,7 @@
             <li class="notice-item">
               <svg class="sprite sprite--normal" role="img">
                 <use
-                  href="../assets/img/sprite.svg#icon-radio-button-checked"
+                  href="/public/img/sprite.svg#icon-radio-button-checked"
                 ></use>
               </svg>
               <div>
