--- a/search/index.html
+++ b/search/index.html
@@ -111,7 +111,7 @@
         <div class="pagination">
           <button class="pagination-btn text-medium">
             <svg class="sprite sprite--light sprite--normal" role="img">
-              <use href="../assets/img/sprite.svg#icon-chevron-left"></use>
+              <use href="/public/img/sprite.svg#icon-chevron-left"></use>
             </svg>
             Prev
           </button>
@@ -119,7 +119,7 @@
           <button class="pagination-btn text-medium">
             Next
             <svg class="sprite sprite--light sprite--normal" role="img">
-              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
+              <use href="/public/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </button>
         </div>
