update breadcrumb component

--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
     <ps-header variant="rest" page="about"></ps-header>
 
     <main class="container">
-      <ps-breadcrumb page="about"></ps-breadcrumb>
+      <ps-breadcrumb path="/about">About</ps-breadcrumb>
 
       <div class="grid-wrapper">
         <div class="about-main">
