--- a/academics/index.html
+++ b/academics/index.html
@@ -19,7 +19,7 @@
     <ps-header variant="rest" page="Academics"></ps-header>
 
     <main class="container">
-      <ps-breadcrumb page="academics"></ps-breadcrumb>
+      <ps-breadcrumb path="/academics">Academics</ps-breadcrumb>
 
       <h1 class="heading-2 section">
         ACADEMICS
