--- a/admission/index.html
+++ b/admission/index.html
@@ -16,11 +16,11 @@
   </head>
 
   <body>
-    <ps-header variant="rest" page="admission"></ps-header>
+    <ps-header variant="rest" page="admissions"></ps-header>
 
     <main class="container">
       <section class="hero">
-        <ps-breadcrumb page="admission"></ps-breadcrumb>
+        <ps-breadcrumb path="/admission">Admissions</ps-breadcrumb>
 
         <h1 class="heading-2">
           ADMISSIONS
