--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -9,6 +9,7 @@
     <script src="/src/components/header.js" type="module"></script>
     <script src="/src/components/footer.js" type="module"></script>
     <script src="/src/components/search.js" type="module"></script>
+    <script src="/src/components/chevron-right.js" type="module"></script>
     <script src="/src/components/breadcrumb.js" type="module"></script>
 
     <title>Contact Us</title>
@@ -19,7 +20,7 @@
 
     <main class="container">
       <section class="hero-section section--inline">
-        <ps-breadcrumb page="contact us"></ps-breadcrumb>
+        <ps-breadcrumb path="/about/contact-us">Contact Us</ps-breadcrumb>
 
         <h1 class="heading-2 page-heading">Contact Us</h1>
         <div class="wrapper">
