--- a/notice/index.html
+++ b/notice/index.html
@@ -20,7 +20,7 @@
     <ps-header variant="rest" page="notice"></ps-header>
 
     <main class="container">
-      <ps-breadcrumb page="notice"></ps-breadcrumb>
+      <ps-breadcrumb path="/notice">Notice</ps-breadcrumb>
 
       <div class="grid--main">
         <section class="news">
