--- a/search/index.html
+++ b/search/index.html
@@ -8,6 +8,7 @@
 
     <script src="/src/components/header.js" type="module"></script>
     <script src="/src/components/footer.js" type="module"></script>
+    <script src="/src/components/chevron-right.js" type="module"></script>
     <script src="/src/components/breadcrumb.js" type="module"></script>
 
     <title>Search Page</title>
@@ -17,7 +18,7 @@
     <ps-header variant="home"></ps-header>
 
     <main class="container section--inline">
-      <ps-breadcrumb page="search"></ps-breadcrumb>
+      <ps-breadcrumb path="/search">Search</ps-breadcrumb>
 
       <section class="search-area">
         <h1 class="heading-1">Searching in Public High School</h1>
